changed name of environmental variables and java base package

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
             "type": "java",
             "name": "WebAppApplication",
             "request": "launch",
+            "mainClass": "elliot.mx.webapp.WebAppApplication",
+            "projectName": "web-app"
+        },
+        {
+            "type": "java",
+            "name": "WebAppApplication",
+            "request": "launch",
             "mainClass": "xaldigital.mx.webapp.WebAppApplication",
             "projectName": "web-app"
         },
