--- a/web-app/.env
+++ b/web-app/.env
@@ -2,4 +2,4 @@
 SERVER_PORT=8080
 
 #xaldigital Api properties
-XAL_DIGITAL_API_BASE_URL=https://tdbdt3nye4.execute-api.us-east-2.amazonaws.com/dev
+CV_API_BASE_URL=https://tdbdt3nye4.execute-api.us-east-2.amazonaws.com/dev
