--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.config.import=optional:file:.env[.properties]
 server.port: ${SERVER_PORT}
 
 #xaldigital Api properties
-xal-digital-api.base_url=${XAL_DIGITAL_API_BASE_URL}
+cv-api.base_url=${CV_API_BASE_URL}
 
 #logfilepath
 logging.file.path=/var/log/tomcat
