--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ hooks:
   Install:
     - location: scripts/deploy_webapp.sh
       timeout: 300
-      runas: root      
+      runas: ubuntu      
   # ApplicationStart:
   #   - location: deploy/application_start.sh
   #     timeout: 300
